[gd_scene format=3 uid="uid://c1w73wbkn1emn"]

[ext_resource type="Script" uid="uid://bg38ig7vfe4ie" path="res://root/scenes/scene/game_scene/game_content/game_entities/enemy_boss_01/boss_01_area_core.gd" id="1_1ccfh"]
[ext_resource type="Texture2D" uid="uid://cet555hmdg6tn" path="res://root/assets/image/game/sprites/enemy/boss_01/boss_core.png" id="1_x6opd"]
[ext_resource type="Shader" uid="uid://g2cg0knko378" path="res://root/assets/image/game/sprites/enemy/hit_flash.gdshader" id="2_1ccfh"]
[ext_resource type="Texture2D" uid="uid://dpkaex5y52akm" path="res://root/assets/image/game/sprites/enemy/boss_01/boss_outer.png" id="2_02cdo"]
[ext_resource type="Texture2D" uid="uid://02us1kwremi" path="res://root/assets/image/game/sprites/enemy/boss_01/boss_turret.png" id="3_1ccfh"]
[ext_resource type="Script" uid="uid://b54mro6ty20ai" path="res://root/scenes/scene/game_scene/game_content/game_entities/enemy_boss_01/Boss_01_area_sheild.gd" id="4_5a3vp"]
[ext_resource type="Script" uid="uid://2apvemcbejt8" path="res://root/scenes/scene/game_scene/game_content/game_entities/enemy_boss_01/Boss_01_Turret.gd" id="6_rgq6k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rgq6k"]
radius = 48.010414

[sub_resource type="Animation" id="Animation_6spbj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/hit_flash_on")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pulj5"]
shader = ExtResource("2_1ccfh")
shader_parameter/hit_flash_color = Color(1, 1, 1, 0)
shader_parameter/hit_flash_on = false

[sub_resource type="Animation" id="Animation_ahfaj"]
resource_name = "hit"
length = 0.15155052
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/hit_flash_on")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.010293998, 0.02050747, 0.09722111),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.00972211, 0.09722111, 0.1435441),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [null, SubResource("ShaderMaterial_pulj5"), SubResource("ShaderMaterial_pulj5"), null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgq6k"]
_data = {
&"RESET": SubResource("Animation_6spbj"),
&"hit": SubResource("Animation_ahfaj")
}

[sub_resource type="Gradient" id="Gradient_02cdo"]
offsets = PackedFloat32Array(0, 0.17012449, 0.75103736, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 0.23333335, 0, 1, 0.27752772, 0.27752775, 0.27752766, 1, 0.24115604, 0.24115604, 0.24115604, 0.22745098)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a3vp"]
size = Vector2(106, 166)

[node name="Boss01" type="Node2D" unique_id=1861805115]

[node name="AreaCore" type="StaticBody2D" parent="." unique_id=221370558]
script = ExtResource("1_1ccfh")

[node name="Sprite2D" type="Sprite2D" parent="AreaCore" unique_id=1395820460]
position = Vector2(0, -23)
texture = ExtResource("1_x6opd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaCore" unique_id=567110758]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_rgq6k")

[node name="HitFlashAnim" type="AnimationPlayer" parent="AreaCore" unique_id=1020130363]
libraries/ = SubResource("AnimationLibrary_rgq6k")

[node name="DieParticle" type="CPUParticles2D" parent="AreaCore" unique_id=1002894111]
z_index = 1
position = Vector2(1.9073486e-06, 1.1368684e-13)
emitting = false
amount = 40
lifetime = 0.24000000000000002
one_shot = true
explosiveness = 0.3
randomness = 0.66
lifetime_randomness = 0.3
emission_shape = 1
emission_sphere_radius = 7.69
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 632.48
initial_velocity_max = 679.94
scale_amount_min = 40.0
scale_amount_max = 130.0
color = Color(1, 1, 1, 0.9254902)
color_ramp = SubResource("Gradient_02cdo")

[node name="DieTime" type="Timer" parent="AreaCore" unique_id=270345223]
wait_time = 0.25

[node name="AreaSheild" type="StaticBody2D" parent="." unique_id=332412124]
script = ExtResource("4_5a3vp")

[node name="Sprite2D" type="Sprite2D" parent="AreaSheild" unique_id=204696503]
position = Vector2(66, -25)
texture = ExtResource("2_02cdo")

[node name="Turret" type="Sprite2D" parent="AreaSheild/Sprite2D" unique_id=527984995]
position = Vector2(-0.52664995, -22.343632)
rotation = 1.1159095
scale = Vector2(0.99999994, 0.99999994)
texture = ExtResource("3_1ccfh")
offset = Vector2(12.175198, 0.5368805)
script = ExtResource("6_rgq6k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSheild" unique_id=280348073]
position = Vector2(61, -30)
shape = SubResource("RectangleShape2D_5a3vp")

[node name="HitFlashAnim" type="AnimationPlayer" parent="AreaSheild" unique_id=1971572997]
libraries/ = SubResource("AnimationLibrary_rgq6k")

[node name="DieParticle" type="CPUParticles2D" parent="AreaSheild" unique_id=862266825]
position = Vector2(61, -38)
emitting = false
amount = 24
lifetime = 0.18000000000000002
one_shot = true
explosiveness = 0.4
randomness = 0.48
lifetime_randomness = 0.65
emission_shape = 1
emission_sphere_radius = 7.69
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 137.43
initial_velocity_max = 264.1
scale_amount_min = 11.67
scale_amount_max = 80.0
color = Color(1, 1, 1, 0.9254902)
color_ramp = SubResource("Gradient_02cdo")

[node name="DieTime" type="Timer" parent="AreaSheild" unique_id=1371831578]
wait_time = 0.25

[node name="AreaSheild2" type="StaticBody2D" parent="." unique_id=2033420674]
rotation = -2.2240105
script = ExtResource("4_5a3vp")

[node name="Sprite2D" type="Sprite2D" parent="AreaSheild2" unique_id=2022438978]
position = Vector2(66, -25)
texture = ExtResource("2_02cdo")

[node name="Turret" type="Sprite2D" parent="AreaSheild2/Sprite2D" unique_id=813798791]
position = Vector2(-0.016004264, -21.45012)
rotation = 1.1159095
texture = ExtResource("3_1ccfh")
offset = Vector2(11.148193, 0.60302734)
script = ExtResource("6_rgq6k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSheild2" unique_id=1673343058]
position = Vector2(61, -30)
shape = SubResource("RectangleShape2D_5a3vp")

[node name="HitFlashAnim" type="AnimationPlayer" parent="AreaSheild2" unique_id=1701045329]
libraries/ = SubResource("AnimationLibrary_rgq6k")

[node name="DieParticle" type="CPUParticles2D" parent="AreaSheild2" unique_id=598929666]
position = Vector2(60.33712, -34.41558)
emitting = false
amount = 24
lifetime = 0.18000000000000002
one_shot = true
explosiveness = 0.4
randomness = 0.48
lifetime_randomness = 0.65
emission_shape = 1
emission_sphere_radius = 7.69
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 137.43
initial_velocity_max = 264.1
scale_amount_min = 11.67
scale_amount_max = 80.0
color = Color(1, 1, 1, 0.9254902)
color_ramp = SubResource("Gradient_02cdo")

[node name="DieTime" type="Timer" parent="AreaSheild2" unique_id=1242246610]
wait_time = 0.25

[node name="AreaSheild3" type="StaticBody2D" parent="." unique_id=1074780353]
rotation = 1.8475227
script = ExtResource("4_5a3vp")

[node name="Sprite2D" type="Sprite2D" parent="AreaSheild3" unique_id=344472317]
position = Vector2(66, -25)
texture = ExtResource("2_02cdo")

[node name="Turret" type="Sprite2D" parent="AreaSheild3/Sprite2D" unique_id=1105921873]
position = Vector2(-0.9546113, -21.843353)
rotation = 1.1159095
scale = Vector2(0.99999994, 0.99999994)
texture = ExtResource("3_1ccfh")
offset = Vector2(11.913823, -0.067359924)
script = ExtResource("6_rgq6k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaSheild3" unique_id=971012638]
position = Vector2(61, -30)
shape = SubResource("RectangleShape2D_5a3vp")

[node name="HitFlashAnim" type="AnimationPlayer" parent="AreaSheild3" unique_id=844256036]
libraries/ = SubResource("AnimationLibrary_rgq6k")

[node name="DieParticle" type="CPUParticles2D" parent="AreaSheild3" unique_id=819332421]
position = Vector2(62.40765, -29.159653)
emitting = false
amount = 24
lifetime = 0.18000000000000002
one_shot = true
explosiveness = 0.74
randomness = 0.48
lifetime_randomness = 0.65
emission_shape = 1
emission_sphere_radius = 7.69
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 137.43
initial_velocity_max = 264.1
scale_amount_min = 41.37
scale_amount_max = 100.98
color = Color(1, 1, 1, 0.9254902)
color_ramp = SubResource("Gradient_02cdo")

[node name="DieTime" type="Timer" parent="AreaSheild3" unique_id=274331336]
wait_time = 0.25

[connection signal="timeout" from="AreaCore/DieTime" to="AreaCore" method="_on_die_time_timeout"]
[connection signal="timeout" from="AreaSheild/DieTime" to="AreaSheild" method="_on_die_time_timeout"]
[connection signal="timeout" from="AreaSheild2/DieTime" to="AreaSheild2" method="_on_die_time_timeout"]
[connection signal="timeout" from="AreaSheild3/DieTime" to="AreaSheild3" method="_on_die_time_timeout"]
